--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -74,10 +74,13 @@ body {
 footer {
   color: $white;
   width: 100%;
-  height: 20px;
+  height: 35px;
   background: #1f1f14;
   border-radius: 75% 75%/ 160% 160% 0px 0px;
   @include flexy(flex,column);
   position: relative;
   bottom: 0px;
+  & a {
+    transition: all .3s;
+  }
 }
