--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -58,12 +58,15 @@ nav {
 .social-nav {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   width: 50%;
   margin: 0 auto;
   padding: 0;
   max-width: 800px;
   transform: scale(.6);
   opacity: .7;
+  & li {
+    margin-right: 15px;
+  }
 
 }
