--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-#nav-icon, nav, header h1, header p {
+#nav-icon, nav, header h1, header p, .music-player {
   margin: 0 auto; }
 
 * {
@@ -536,6 +536,17 @@ body {
   position: absolute;
   top: 0px;
   cursor: pointer; }
+
+.music-player {
+  height: 350px;
+  width: fit-content;
+  border-radius: 15px;
+  box-shadow: 1px 1px 5px #000; }
+  .music-player iframe {
+    border-radius: 15px;
+    box-shadow: 1px 1px 5px #000;
+    width: 100%;
+    height: 100%; }
 
 footer {
   color: #fff;
