--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -73,6 +73,22 @@ body {
   cursor: pointer;
 }
 
+.music-player {
+  height: 350px;
+  width: fit-content;
+  border-radius: 15px;
+  box-shadow: 1px 1px 5px $black;
+  @extend %center;
+  & iframe {
+    border-radius: 15px;
+    box-shadow: 1px 1px 5px $black;
+    width: 100%;
+    height: 100%;
+
+  }
+}
+
+
 
 footer {
   color: $white;
