--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -4,11 +4,17 @@ header {
   width: 100%;
   height: 190px;
   display: block;
-  -webkit-border-radius: 63px 63px 63px 63px / 108px 108px 72px 72px;
-  border-radius: 50% 50% / 0% 0% 96% 96%;
+  box-shadow: 0px 5px 5px darkgrey;
+  @include mq(medium){
+    height: 250px;
+    transform-origin: left bottom;
+
+
+
+  }
+
   & h1 {
     text-align: center;
-    transform: translateY(85%);
     transition: all 0.5s cubic-bezier(0.42, 0, 0.58, 1);
 
   }
