--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ a {
   list-style-type: none; }
 
 body {
-  max-width: 1200px;
+  max-width: 1500px;
   margin: 0 auto; }
 
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
@@ -541,7 +541,7 @@ body {
   width: fit-content;
   border-radius: 15px;
   box-shadow: 1px 1px 5px #000;
-  margin-bottom: 2em; }
+  margin-top: 2em; }
   .music-player iframe {
     border-radius: 15px;
     box-shadow: 1px 1px 5px #000;
@@ -551,9 +551,8 @@ body {
 footer {
   color: #fff;
   width: 100%;
-  height: 35px;
+  height: 40px;
   background: #1f1f14;
-  border-radius: 75% 75%/ 160% 160% 0px 0px;
   display: flex;
   flex-direction: column;
   position: relative;
