--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -68,7 +68,7 @@ body {
   border-radius: 15px;
   box-shadow: 1px 1px 5px $black;
   @extend %center;
-  margin-bottom: 2em;
+  margin-top: 2em;
   & iframe {
     border-radius: 15px;
     box-shadow: 1px 1px 5px $black;
@@ -83,9 +83,8 @@ body {
 footer {
   color: $white;
   width: 100%;
-  height: 35px;
+  height: 40px;
   background: #1f1f14;
-  border-radius: 75% 75%/ 160% 160% 0px 0px;
   @include flexy(flex,column);
   position: relative;
   bottom: 0px;
