--- a/css/styles.css
+++ b/css/styles.css
@@ -399,11 +399,9 @@ template {
   display: none; }
 
 header {
-  background-color: #1f1f14;
   width: 100%;
   height: 190px;
-  display: block;
-  box-shadow: 0px 5px 5px darkgrey; }
+  display: block; }
   @media (min-width: 640px) {
     header {
       height: 250px;
@@ -492,11 +490,14 @@ footer a {
 
 header {
   transform: translateY(-15%) skewY(-2deg);
-  background-image: url("../images/stars2.jpg");
   background-size: cover; }
 
 body {
-  background-color: #eeeee0; }
+  background-image: url("../images/stars2.jpg"), url("../images/ocean.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: top, bottom;
+  background-color: #000; }
 
 .home-text {
   margin: 0 .5em;
@@ -561,7 +562,8 @@ footer {
     transition: all .3s; }
 
 main {
-  margin-bottom: 2em; }
+  margin-bottom: 2em;
+  height: 100vh; }
 
 .module {
   width: 400px;
@@ -704,7 +706,7 @@ nav {
 
 .slideIn {
   transform: translateX(0%);
-  max-width: 1200px; }
+  max-width: 1500px; }
 
 footer > a:hover {
   transform: scale(1.03);
