--- a/css/styles.css
+++ b/css/styles.css
@@ -446,8 +446,7 @@ nav {
   margin: 0 auto;
   padding: 0;
   max-width: 800px;
-  transform: scale(0.6);
-  opacity: .7; }
+  transform: scale(0.6); }
   .social-nav li {
     margin-right: 15px; }
 
@@ -459,7 +458,8 @@ nav {
     color: #fff; }
 
 p {
-  font-family: 'Raleway'; }
+  font-family: 'Raleway';
+  color: #fff; }
 
 header {
   display: flex;
@@ -475,7 +475,7 @@ header {
 
 .page-heading {
   font-family: "Roboto Condensed", "Cinzel Decorative", "Julius Sans One", "Alegreya Sans SC", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #1f1f14;
+  color: #fff;
   margin-top: 5em;
   text-align: center; }
 
@@ -485,7 +485,6 @@ footer a {
   font-weight: 100;
   color: #fff;
   text-align: center;
-  opacity: .7;
   margin: 0; }
 
 header {
@@ -499,7 +498,7 @@ body {
   background-position: top, bottom;
   background-color: #000; }
 
-.home-text {
+.home-content {
   margin: 0 .5em;
   text-align: center; }
 
@@ -512,10 +511,12 @@ body {
   top: 0;
   display: none;
   transform: translateX(100%);
-  background-color: #eeeee0;
-  border: 1px solid #1f1f14;
+  background-color: #000;
+  color: #fff;
+  border: 1px solid #fff;
   border-radius: 8px;
   overflow-y: scroll;
+  opacity: .9;
   padding-bottom: 40px; }
   .about p,
   .music p,
@@ -529,7 +530,7 @@ body {
 .close {
   font-family: "Roboto Condensed", "Cinzel Decorative", "Julius Sans One", "Alegreya Sans SC", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 100;
-  color: #1f1f14;
+  color: #fff;
   display: inline;
   padding: 10px;
   margin: 0;
@@ -553,7 +554,6 @@ footer {
   color: #fff;
   width: 100%;
   height: 40px;
-  background: #1f1f14;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -623,6 +623,9 @@ h1 {
 p {
   margin: 0;
   padding: 0px; }
+
+.stop-scrolling {
+  overflow-y: hidden; }
 
 [class^=icon-] {
   display: block;
