--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -1,6 +1,6 @@
 [class^=icon-] {
   display: block;
-  width: 25px;
+  width: 15px;
   height: 25px;
   background: url('../icons/sprite.svg');
   text-indent: 100%;
@@ -18,17 +18,13 @@
 
 
 .icon-instagram {
-  background-position: -41px 0;
+  background-position: -31px -24px;
 }
 
 .icon-facebook {
-  background-position: 0 0;
+  background-position: 0 68px;
 }
 
-.icon-github {
-  background-position: -82px 0;
-}
-
-.icon-linkedin {
-  background-position: -123px 0;
+.icon-spotify {
+  background-position: -62px -24px;
 }
