--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -66,9 +66,9 @@ nav {
   justify-content: center;
   width: 50%;
   margin: 0 auto;
-  padding: 0;
+  padding-left: 20px;
   max-width: 800px;
-  transform: scale(.6);
+  margin-bottom: 1em;
   & li {
     margin-right: 15px;
   }
