--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -2,21 +2,36 @@ header {
   transform: translateY(-15%) skewY(-2deg);
   background-image: url("../images/stars2.jpg");
   background-size: cover;
-  height: 30em;
+  height: 220px;
+  @include mq(medium) {
+    height: 15em;
+  }
+  @include mq(large) {
+    height: 20em;
+  }
 }
 
 
 
 
 body {
-
-
+  transition: all .5s cubic-bezier(0.42, 0, 0.58, 1);
   background-color: $black;
 }
 
 .home-content{
   margin: 0 .5em;
   text-align: center;
+  z-index: 0;
+}
+
+.intro {
+  font-size: 16px;
+  width: 75%;
+  margin: 0 auto;
+  @include mq(medium) {
+    font-size: 20px;
+  }
 }
 
 
@@ -30,18 +45,38 @@ body {
   top: 0;
   display: none;
   transform: translateX(100%);
-  background-color: $black;
+  background-color: rgba(0,0,0,.9);
   color: $white;
   border: 1px solid $white;
   border-radius: 8px;
-  overflow-y: scroll;;
-  opacity: .9;
+  overflow: scroll;
   padding-bottom: 40px;
+  z-index: 1000;
   & p {
-    margin: 0 .5em;
+    @extend %center;
     text-align: center;
+    width: 75%;
   }
+  & a {
+    @include link-reset($black, 'Raleway');
+    text-align: center;
+    text-decoration: underline;
+    display: block;
+    width: fit-content;
+    @extend %center;
+    margin-top: 12px;
+    margin-bottom: 8px;
+    padding: 10px;
+    background-color: $white;
+    border-radius: 9px;
+    margin-top: 12px;
+    transition: all .3s;
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.02);
 
+    }
+  }
 }
 
 
@@ -62,18 +97,19 @@ body {
   position: absolute;
   top: 0px;
   cursor: pointer;
+  text-align: left !important;
 }
 
 .music-player {
   height: 300px;
   width: 90%;
   border-radius: 15px;
-  box-shadow: 1px 1px 5px $black;
+
   @extend %center;
   margin-top: 2em;
   & iframe {
-    border-radius: 15px;
-    box-shadow: 1px 1px 5px $black;
+
+
     width: 100%;
     height: 100%;
 
@@ -111,7 +147,7 @@ main {
   transition: all .5s cubic-bezier(0.42, 0, 0.58, 1);
   @extend %center;
   padding: 15px 55px;
-  box-sizing: padding-box;
+  box-sizing: border-box;
   position: relative;
   border-right: 1px solid $white;
   border-top: 1px solid $white;
@@ -171,6 +207,7 @@ main {
 h1 {
   margin: 0;
 }
+
 p {
   margin: 0;
   padding: 0px;
@@ -178,4 +215,14 @@ p {
 
 .stop-scrolling {
   overflow-y: hidden;
+
+}
+
+//video styling
+
+#player,
+.video-stream {
+  max-width: 100%;
+
+
 }
