--- a/css/styles.css
+++ b/css/styles.css
@@ -419,7 +419,8 @@ header {
 
 #nav-icon {
   display: inline-block;
-  cursor: pointer; }
+  cursor: pointer;
+  padding: 1em; }
 
 nav ul {
   letter-spacing: 1.5px;
@@ -535,7 +536,6 @@ body {
   color: #fff;
   border: 1px solid #fff;
   border-radius: 8px;
-  overflow: scroll;
   padding-bottom: 40px;
   z-index: 1000; }
   .about p,
@@ -711,10 +711,10 @@ nav {
       transform: translateY(150%) skewY(2deg); } }
 
 #nav-icon {
-  transform: translateY(50%) skewY(2deg); }
+  transform: translateY(25%) skewY(2deg); }
   @media (min-width: 640px) {
     #nav-icon {
-      transform: translateY(115%) skewY(2deg); } }
+      transform: translateY(60%) skewY(2deg); } }
 
 #nav {
   transition: all 0.5s cubic-bezier(0.42, 0, 0.58, 1); }
@@ -762,7 +762,14 @@ nav {
   transform: translateX(0%);
   max-width: 1500px;
   margin-bottom: 15em;
-  overflow: scroll; }
+  overflow-y: scroll;
+  height: calc(100% + 1px);
+  -webkit-transform: translateZ(0px);
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-perspective: 1000; }
+
+* {
+  -webkit-overflow-scrolling: touch !important; }
 
 footer > a:hover {
   transform: scale(1.03);
